# openvino-gemma4-12b

./: .gitignore  README.md
samples/chatbot/: README.md  app.py  pipeline_runner.py  requirements.txt  run_chatbot.bat
samples/common/: download_model.py
samples/stage1_safetensors/: prepare_tokenizer.py  run.bat
samples/stage1_safetensors/config/: config_modeling_text_img_audio_cb.yaml  config_modeling_text_img_audio_cb_st.yaml
samples/stage2_ir_genai/: CMakeLists.txt  NOTES.md  build.bat  genai_facade_llm.cpp  genai_vlm_deploy.cpp  run_ir.bat
scripts/: setup_env.bat
